// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TeamSettings hide invite code if no permissions for team inviting 1`] = `
<div>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
    >
      <MemoizedFormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <Connect(SettingItemMin)
      describe="name"
      section="name"
      title="Team Name"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <Connect(SettingItemMin)
      describe=""
      section="description"
      title="Team Description"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingPicture
      clientError=""
      file={null}
      helpText={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Upload a team icon in BMP, JPG or PNG format.\\\\nSquare images with a solid background color are recommended."
          id="setting_picture.help.team"
        />
      }
      imageContext="team"
      loadingPicture={false}
      onFileChange={[Function]}
      onRemove={[Function]}
      onSubmit={[Function]}
      serverError=""
      src={null}
      submitActive={false}
      title="Team Icon"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <Connect(SettingItemMin)
      describe=""
      section="allowed_domains"
      title="allowedDomains"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <OpenInvite
      allowOpenInvite={false}
      isActive={false}
      isGroupConstrained={false}
      onToggle={[Function]}
      patchTeam={[MockFunction]}
      teamId="team_id"
    />
    <div
      className="divider-light"
    />
    <Connect(SettingItemMin)
      describe="Click 'Edit' to regenerate Invite Code."
      section="invite_id"
      title="Invite Code"
      updateSection={[Function]}
    />
    <div
      className="divider-dark"
    />
  </div>
</div>
`;

exports[`components/TeamSettings hide invite code if no permissions for team inviting 2`] = `
<div>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
    >
      <MemoizedFormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <Connect(SettingItemMin)
      describe="name"
      section="name"
      title="Team Name"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <Connect(SettingItemMin)
      describe=""
      section="description"
      title="Team Description"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingPicture
      clientError=""
      file={null}
      helpText={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Upload a team icon in BMP, JPG or PNG format.\\\\nSquare images with a solid background color are recommended."
          id="setting_picture.help.team"
        />
      }
      imageContext="team"
      loadingPicture={false}
      onFileChange={[Function]}
      onRemove={[Function]}
      onSubmit={[Function]}
      serverError=""
      src={null}
      submitActive={false}
      title="Team Icon"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <Connect(SettingItemMin)
      describe=""
      section="allowed_domains"
      title="allowedDomains"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <OpenInvite
      allowOpenInvite={false}
      isActive={false}
      isGroupConstrained={false}
      onToggle={[Function]}
      patchTeam={[MockFunction]}
      teamId="team_id"
    />
    <div
      className="divider-light"
    />
    <div
      className="divider-dark"
    />
  </div>
</div>
`;

exports[`components/TeamSettings should match snapshot when team is group constrained 1`] = `
<div>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <MemoizedFormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
    >
      <MemoizedFormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <Connect(SettingItemMin)
      describe="TestTeam"
      section="name"
      title="Team Name"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <Connect(SettingItemMin)
      describe="The Test Team"
      section="description"
      title="Team Description"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingPicture
      clientError=""
      file={null}
      helpText={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Upload a team icon in BMP, JPG or PNG format.\\\\nSquare images with a solid background color are recommended."
          id="setting_picture.help.team"
        />
      }
      imageContext="team"
      loadingPicture={false}
      onFileChange={[Function]}
      onRemove={[Function]}
      onSubmit={[Function]}
      serverError=""
      src={null}
      submitActive={false}
      title="Team Icon"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <OpenInvite
      allowOpenInvite={false}
      isActive={false}
      isGroupConstrained={true}
      onToggle={[Function]}
      patchTeam={[MockFunction]}
      teamId="team_id"
    />
    <div
      className="divider-dark"
    />
  </div>
</div>
`;
